@@ -13,11 +13,8 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
-import java.net.Proxy;
-import java.net.ServerSocket;
-import java.net.URL;
-import java.net.URLEncoder;
+import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.Executors;
@@ -145,7 +142,7 @@ public class HttpUtil
                     try
                     {
                         byte[] abyte = new byte[4096];
-                        URL url = new URL(packUrl);
+                        URL url = URI.create(packUrl).toURL();
                         httpurlconnection = (HttpURLConnection)url.openConnection(p_180192_5_);
                         float f = 0.0F;
                         float f1 = (float)p_180192_2_.entrySet().size();
@@ -255,7 +252,7 @@ public class HttpUtil
 
                             try
                             {
-                                HttpUtil.logger.error(IOUtils.toString(inputstream1));
+                                HttpUtil.logger.error(IOUtils.toString(inputstream1, StandardCharsets.UTF_8));
                             }
                             catch (IOException ioexception)
                             {
